# redis-me

./: .gitignore  QWEN.md  README.md  README_zh.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts  vue-tsc-errors.txt
.cursor/rules/: feature-key-comments.mdc  frontend-simplicity-and-reuse.mdc  git-commit-conventions.mdc  release-tag.mdc
.github/workflows/: release.yml  sync-release-to-gitee.yml
.qwen/: settings.json  settings.json.orig
docs/: config.js  config.ts  index.md  latest.json  todo.md
docs/.vitepress/: config.js  config.ts  shims.d.ts
docs/changelog/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md  v0.9.0.md  v0.9.1.md  v0.9.2.md  (+3 more)
plans/: command-export-format.md  command-logging.md  copy-key-as-command.md  custom-formatter.md  favorite-keys.md  global-timeout-settings.md  project-deep-audit-2026-04-25.md  rdm-import.md  redis-acl-management.md  redis-client-competitive-gap-2026-04-25.md  scan-keys-optimization.md  value-display-format.md
scripts/: check-locale-keys.mjs  find-unused-i18n.mjs
src/: App.css  App.vue  main.js  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/resources/conf/: Valkey9.0.conf
src-tauri/resources/icons/: icon.icns
src-tauri/src/: api.rs  lib.rs  main.rs
src-tauri/src/client/: client.rs  client_trait.rs  impl_cluster.rs  impl_single.rs  me_conn.rs  mod.rs  state.rs  unified.rs  unified_conn.rs
src-tauri/src/utils/: app_store.rs  capabilities.rs  command_log.rs  conn.rs  error.rs  macros.rs  mod.rs  model.rs  redis_cli_format.rs  setup.rs  ssh_tunnel.rs  util.rs
test/: RedisME-UI测试.md  RedisME-发版检查清单.md  appStore.txt  commands-simple.js  commands-simple.json  commands-usage.js  tip-info.js  todo.md
(+260 files in other folders)
