[package]
name = "redis-me"
version = "1.0.0"
description = "Redis Desktop Manager based on Tauri"
authors = ["hepengju"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "redis_me_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tauri默认依赖
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-log = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 项目添加依赖
redis = { version = "1", features = [
  "cluster",
  "sentinel",
  "json",
  "tls-rustls",
  "tls-rustls-insecure",
] }
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
  "tls12",
  "logging",
] }
parking_lot = "0.12"
log = "0.4"
rand = "0.9"
anyhow = { version = "1" }
shell-words = "1"
base64 = "0.22"
chrono = "0.4"
chrono-tz = "0.8"
fern = { version = "0.7", features = ["colored"] }

# SSH 隧道支持（使用 russh 支持现代密钥格式）
russh = "0.60"
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-system-fonts = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
